--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock Paper Scissors Battle</title>
+    <title>Rock Paper Scissors Shot</title>
+    <meta icon="">
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
