--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors Shot</title>
-    <meta icon="">
+    <link rel="icon" type="image/png" href="/static/images/favicon.png">
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
@@ -88,7 +88,7 @@
         <div class="content-wrapper">
           <!-- Header with theme toggle -->
           <div class="header-section">
-            <h1>Rock Paper Scissors</h1>
+            <h1>Battle Arena. SHOT!!!</h1>
             <button
               id="themeToggle"
               class="theme-toggle"
