--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
     />
   </head>
   <body>
+    <button id="soundToggle" title="Toggle Sound">🔊</button>
     <div class="app-container">
       <!-- Toggle Sidebar Button -->
       <button
