--- a/static/style.css
+++ b/static/style.css
@@ -112,6 +112,9 @@ body.light-mode #soundToggle {
 
 /* Sidebar */
 .sidebar {
+  margin-top: auto;
+  margin-bottom: auto;
+  border-radius: 0 24px 24px 0;
   width: 280px;
   background: linear-gradient(180deg, var(--bg-card) 0%, var(--bg-main) 100%);
   border-right: 1px solid var(--border);
@@ -120,7 +123,7 @@ body.light-mode #soundToggle {
   flex-direction: column;
   position: sticky;
   top: 0;
-  height: 100vh;
+  height: 95vh;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 1002;
 }
