--- a/static/style.css
+++ b/static/style.css
@@ -633,6 +633,8 @@ h1 {
   }
 
   .sidebar {
+    top: 50%;
+    transform: translate(0, -50%);
     position: fixed;
     left: -100%;
     width: 280px;
